fix blurred bg around nav links

--- a/public/styles/partials/global/burger.css
+++ b/public/styles/partials/global/burger.css
@@ -66,6 +66,7 @@
         /* padding: 1rem; */
         border: none;
         font-size: 0.8625rem;
+        -webkit-backdrop-filter: none;
     }
 
     .gn {
